# mental-health-screening-fyp

./: .gitignore  pyproject.toml  requirements.txt
Docs/: Chapter_01_Introduction_v2.md  DECISIONS.md  PPRS.docx  baseline-results-explained.md  baseline-results.md  c1-noise-design.md  contribution-1.md  data-harmonization.md  problem-in-plain-english.md  progress-and-roadmap.md  project-proposal.md  solution-in-plain-english.md  technical-contribution-in-depth.md  whole-project-in-simple-terms.md
notebooks/: train_colab.ipynb
src/data/: README.md  __init__.py  __main__.py  base.py  combine.py  config.py  label_map.py  schema.py  text_normalization.py
src/data/loaders/: __init__.py  daic_woz.py  low_et_al.py  swmh.py
src/modeling/: __init__.py  config.py  dataset.py  hf_model.py  labels.py  metrics.py  predict.py  splits.py  train.py
src/noise/: __init__.py  clusterability.py  embeddings.py  hoc_estimate.py
tests/: conftest.py  test_combine.py  test_label_map.py  test_loader_daic.py  test_loaders_reddit.py  test_modeling_dataset.py  test_modeling_labels.py  test_modeling_metrics.py  test_modeling_predict.py  test_modeling_splits.py  test_noise_clusterability.py  test_noise_embeddings.py  test_noise_hoc.py  test_text_normalization.py
