[project]
name = "mental-health-screening-data"
version = "0.1.0"
description = "Data-ingestion layer: harmonized multi-condition mental-health screening corpus."
requires-python = ">=3.11"
dependencies = ["pandas>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
